Important dates noted

--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -30,5 +30,18 @@ library(tidyverse)
 data <- read.csv("data/Motor_Vehicle_Collisions_-_Crashes.csv")
 ```
 
-
+Dates to look at:
+Jan 20 - First reported US case
+Feb 9 - Death toll in China surpasses SARS epidemic (811 deaths)
+Feb 29 - First death on American soil
+March 1 - First confirmed case in NYC
+March 11 - WHO declares pandemic, Trump bans travel from 26 European countries
+March 13 - Trump declares national emergency
+March 14 - First coronavirus death in NYC
+March 17 - De Blasio says NYC considering order, Cuomo says it won't happen
+March 20 - Cuomo orders lockdown
+March 28 - Trump signs $2.2 trillion stimulus bill
+April 3 - CDC recommends wearing masks
+April 14 - Cuomo says he would defy Trump order to reopen New York
+April 17 - Trump tweets "Liberate" Minnesota, Michigan, Virginia
  
