Added a few more dates

--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -35,11 +35,14 @@ Jan 20 - First reported US case
 Feb 9 - Death toll in China surpasses SARS epidemic (811 deaths)
 Feb 29 - First death on American soil
 March 1 - First confirmed case in NYC
+March 7 - Cuomo declares state of emergency
 March 11 - WHO declares pandemic, Trump bans travel from 26 European countries
 March 13 - Trump declares national emergency
 March 14 - First coronavirus death in NYC
-March 17 - De Blasio says NYC considering order, Cuomo says it won't happen
+March 16 - NYC schools close (ordered by Cuomo)
+March 17 - De Blasio says NYC considering order, Cuomo says it won't happen; schools, bar, restaurants close in NYC (de Blasio)
 March 20 - Cuomo orders lockdown
+March 22 - Lockdown starts (8pm)
 March 28 - Trump signs $2.2 trillion stimulus bill
 April 3 - CDC recommends wearing masks
 April 6 - Cuomo extends stay at home order to April 29
