--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -222,13 +222,30 @@ data <- data %>%
 
 ```{r}
 data %>%
-   count(VEHICLE.TYPE.CODE.1)
+   count(VEHICLE.TYPE.CODE.1, sort = TRUE)
 ```
 
 ```{r}
 data <- data %>%
    mutate(weekday = wday(mdy(CRASH.DATE), label = TRUE)) %>%
    separate(CRASH.DATE, c("month", "day", "year"), "/")
+data <- data %>%
+   mutate(day = as.numeric(day)) %>%
+   mutate(month = as.numeric(month))
+data <- data %>%
+   mutate(daytot = case_when(
+      month == "1" ~ day,
+      month == "2" ~ day + 31,
+      month == "3" ~ day + 60,
+      TRUE ~ day + 91
+   ))
+data <- data %>%
+  mutate(VEHICLE.TYPE.CODE.1new = fct_lump(VEHICLE.TYPE.CODE.1, n = 14, other_level = "Other"))
+```
+
+```{r stuff}
+data %>%
+   count(VEHICLE.TYPE.CODE.1new, sort = TRUE)
 ```
 
 ```{r}
@@ -238,4 +255,76 @@ data <- data %>%
       TRUE ~ "PM"
    )) %>%
    mutate(person_tot = NUMBER.OF.PERSONS.INJURED + NUMBER.OF.PERSONS.KILLED)
+
+```
+
+
+### Exploratory Data Analysis
+```{r eda}
+data %>%
+   ggplot(aes(x = weekday)) +
+   geom_bar() +
+   labs(x = "Day of Week",
+        y = "Frequency")
+data %>%
+   count(weekday)
+data %>%
+   ggplot(aes(x = time_of_day)) +
+   geom_bar() +
+   labs(x = "Time of Day",
+        y = "Frequency")
+data %>%
+   count(time_of_day)
+data %>%
+   ggplot(aes(x = person_tot)) +
+   geom_histogram(breaks = seq(0, 10, by = 1)) +
+   labs(x = "People Injured or Killed",
+        y = "Frequency")
+data %>%
+   count(person_tot)
+data %>%
+   ggplot(aes(x = month)) +
+   geom_bar() +
+   labs(x = "Month",
+        y = "Frequency")
+### March lower, April not done yet but still proportionally even lower
+data %>%
+   ggplot(aes(x=daytot)) +
+   geom_freqpoly()
+data %>%
+   ggplot(aes(x=daytot, y = count(daytot))) +
+   geom_line()
+data %>%
+   count(month)
+data %>%
+  ggplot(aes(x = weekday, fill = time_of_day)) +
+  geom_bar(position = "fill") +
+  labs(title = "Relationship between Day of Week and Time of day",
+       x = "Day of week", y = "Proportion")
+###maybe more PM crashes on weekends?
+data %>%
+   ggplot(aes(x = weekday, y = person_tot)) +
+   geom_boxplot() +
+   labs(title = "Relationship between Day of Week and Killed/Injured",
+       x = "day of week", y = "Killed/Injured")
+data %>%
+   ggplot(aes(x = as.character(month), y = person_tot)) +
+   geom_boxplot() +
+   labs(title = "Relationship between Month and Killed/Injured",
+       x = "month", y = "Killed/Injured")
+data %>%
+  ggplot(aes(x = month, fill = VEHICLE.TYPE.CODE.1new)) +
+  geom_bar(position = "fill") +
+  labs(title = "Relationship between month and vehicle",
+       x = "Month", y = "Proportion")
+### maybe larger proportion of sedans compared to everything else now
+
+```
+
+
+```{r more stuff}
+p <- ggmap(get_googlemap(center = c(lon = 40.7128, lat = 74.0060),
+                    zoom = 11, scale = 2,
+                    maptype ='terrain',
+                    color = 'color'))
 ```
