--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -117,6 +117,7 @@ data <- data %>%
    ))
 ```
 
+
 ```{r}
 data %>%
    count(CONTRIBUTING.FACTOR.VEHICLE.1)
@@ -241,6 +242,12 @@ data <- data %>%
    ))
 data <- data %>%
   mutate(VEHICLE.TYPE.CODE.1new = fct_lump(VEHICLE.TYPE.CODE.1, n = 14, other_level = "Other"))
+
+#New indicator variable saying pre- or post-lockdown:
+
+data <- data %>%
+  mutate(lockdown=case_when(daytot>81 ~ 1,
+                            daytot<=81 ~ 0))
 ```
 
 ```{r stuff}
